# pymatting

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_gpu.txt  requirements_tests.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
benchmarks/: .gitignore  README.md  benchmark_image_sizes.py  calculate_laplacian_error.py  calculate_laplacian_performance.py  config.py  plot_laplacian_average_error.py  plot_laplacian_error_per_image.py  plot_laplacian_performance.py  plot_laplacian_performance_many_bars.py  plot_results.py  rebuild.sh  solve_amgcl.cpp  solve_amgcl.py  solve_eigen.cpp  solve_eigen.py  solve_mumps.c  solve_mumps.py  solve_petsc.c  solve_petsc.py
doc/: README.md  build.py  build.sh  embed_external_resources.py  highlight.py  parse_bib.py  parse_markdown.py  remove_captions.py  util.py
doc/source/: conf.py  (+11 more)
examples/: advanced_example.py  expert_example.py  lemur_at_the_beach.py  simple_example.py
paper/: paper.bib  paper.md
pymatting/: __about__.py  __init__.py
pymatting_aot/: README.md  boxfilter.py  cc.py  cf_laplacian.py  estimate_foreground_ml.py  ichol.py  kdtree.py  lbdm_laplacian.py  rw_laplacian.py
tests/: .gitignore  download_images.py  run_tests.py  test_boxfilter.py  test_cg.py  test_distance.py  test_estimate_alpha.py  test_foreground.py  test_ichol.py  test_kdtree.py  test_laplacians.py  test_lkm.py  test_preconditioners.py  test_remove_background_bicolor.py  test_simple_api.py  test_util.py
(+44 files in other folders)
